@@ -1,3 +1,7 @@
+Thu Mar 13 22:27:26 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gtkexport.c: change html export type and style sheet to combo_box
+
 Thu Mar 13 22:16:39 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gktoptions.c: change cheat roll and rng choosers to combo_box
